src/ui/snapshots/kvn_tui__ui__widgets__tests__error_toast_wraps_to_two_lines_snapshot.snap
---
source: src/ui/widgets.rs
expression: trimmed
---

 ┌──────────────────────────────────────┐
 │ Connection failed: handshake timed   │
 │ out while contacting the selected    │
 └──────────────────────────────────────┘





[42x10]
