src/ui/snapshots/kvn_tui__ui__widgets__tests__info_toast_snapshot.snap
---
source: src/ui/widgets.rs
expression: trimmed
---

                                     ┌────────────────────┐
                                     │ Connected to Alpha │
                                     └────────────────────┘






[60x10]
