src/ui/snapshots/kvn_tui__ui__widgets__tests__status_bar_connected_auto_snapshot.snap
---
source: src/ui/widgets.rs
expression: buffer_to_string(&buf)
---
 CONNECTED  Alpha                                                                               Auto  DoH  Global
